--- a/internetProgramming_TeemProject/appsettings.json
+++ b/internetProgramming_TeemProject/appsettings.json
@@ -4,7 +4,26 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "tokenManagement": {
+      "secret": "123456",
+      "issuer": "webapi.cn",
+      "audience": "WebApi",
+      "accessExpiration": 30,
+      "refreshExpiration": 60
     }
+
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SqlConnection": "Server=.;Initial Catalog=MyAppDb; Integrated Security=true;"
+  },
+
+  "AllowedHosts": "*",
+  "tokenConfig": {
+    "secret": "D96BFA5B-F2AF-45BC-9342-5A55C3F9BBB0",
+    "issuer": "test.cn",
+    "audience": "test",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  }
 }
