--- a/internetProgramming_TeemProject/Properties/launchSettings.json
+++ b/internetProgramming_TeemProject/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "internetProgramming_TeemProject": {
